examples/k8s/3-blue-green/ingress_controller/1-blue-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-myapp
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
      color: blue
  template:
    metadata:
      labels:
        app: myapp
        color: blue
    spec:
      containers:
        - name: myapp
          image: ghcr.io/koumi15cancer/deployment_demo/backend-v1:latest
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
