examples/k8s/3-blue-green/ingress_controller/3-blue-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blue-myapp-svc
  namespace: default
spec:
  selector:
    app: myapp
    color: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
