examples/k8s/3-blue-green/ingress_controller/4-green-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: green-myapp-svc
  namespace: default
spec:
  selector:
    app: myapp
    color: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
